# nbmake-action

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  main.ipynb  package-lock.json  package.json  pre-push  requirements.txt  treebeard.yaml
.devcontainer/: devcontainer.json
.github/workflows/: action_integration_test.yml  action_npm_test.yml  action_unit_test.yml  check_action_dist.yml  cli_test.yml  e2e_test.yaml  e2e_test.yml  intall_test.yml  integration_test.yml  lint.yml  pip_install_test.yml  pytest.yml  run_on_treebeard.yml  teams_integration_test.yml  test_end_to_end.yaml  test_examples.yml  windows_test.yml
__tests__/: main.test.ts  test.yml
__tests__/resources/: failing.ipynb  passing.ipynb
binder/: Dockerfile
docs/: cli.md  conf.py  external_integrations.md  faq.md  index.md  index.rst  integrate_your_infra.md  on_prem.md  outputs.md  project_config.md  requirements.txt  running.md  secrets.md  testing_locally.md
docs/usage/: quickstart.rst
e2e-test/: .gitignore  local_install  local_test  new_user_test  test
examples/: run_example_test  set_local_dependencies
examples/poetry/: README.rst  main.ipynb  pyproject.toml
examples/poetry/tests/: test_example_4.py
integration-test/: install_hello_repo  local_install  test  test_local
src/: conf.ts  envs_to_not_forward.ts  logging.ts  main.ts
treebeard-lib/: Dockerfile  Pipfile  README.md  cloudbuild.yaml  github_env  publish  run_tests.ipynb  setup.py  version.py
tutorial/: connect.ipynb  hello.ipynb  tutorial.ipynb
(+144 files in other folders)
