[tool.poetry]
name = "example_4"
version = "0.1.0"
description = ""
authors = ["Rabscuttler <laurence.watson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.0.5"
jupyter = "^1.0.0"
pandas = "^1.0.0"
matplotlib = "^3.1.2"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
